# llm-local-chat

./: Dockerfile  README.md  k8s-pod.yml  pyproject.toml  requirements.txt
llmchat/: app.py  pdf_search_ollama.py
llmchat/templates/: chat.html  upload.html
